# communication_softbus_lite

./: BUILD.gn  README.md  README_zh.md  readme.md
authmanager/: BUILD.gn
authmanager/include/: auth_interface.h
authmanager/source/: auth_interface.c  bus_manager.c  wifi_auth_manager.c
discovery/: BUILD.gn
discovery/coap/include/: coap_socket.h
discovery/coap/source/: coap_discover.c  coap_socket.c
discovery/discovery_service/source/: common_info_manager.c  discovery_service.c
interfaces/kits/discovery/: discovery_service.h
interfaces/kits/transport/: session.h
os_adapter/include/: os_adapter.h
os_adapter/source/L0/: os_adapter.c
os_adapter/source/L1/: os_adapter.c
trans_service/: BUILD.gn
trans_service/include/utils/: tcp_socket.h
trans_service/source/libdistbus/: auth_conn_manager.c  tcp_session.c  tcp_session.h  tcp_session_manager.c  trans_lock.c  trans_lock.h
trans_service/source/utils/: aes_gcm.c  message.c  tcp_socket.c
