# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
if (ohos_kernel_type == "liteos_m") {
  config("authmanager_config") {
    defines = [
      "SOFTBUS_DEBUG",
      "_SCANTY_MEMORY_",
    ]

    include_dirs = [
      "include",
      "//foundation/communication/softbus_lite/discovery/discovery_service/include",
      "//foundation/communication/softbus_lite/os_adapter/include",
      "//foundation/communication/softbus_lite/trans_service/include/utils",
      "//foundation/communication/softbus_lite/trans_service/include/libdistbus",
      "//foundation/communication/softbus_lite/interfaces/kits/transport",
      "//base/security/deviceauth/interfaces/innerkits/deviceauth_lite",
      "//third_party/cJSON",
      "$ohos_third_party_dir/mbedtls/include",
    ]
  }

  authmanager_sources = [
    "source/auth_conn.c",
    "source/auth_interface.c",
    "source/bus_manager.c",
    "source/msg_get_deviceid.c",
    "source/wifi_auth_manager.c",
  ]

  lite_library("authmanager") {
    target_type = "static_library"
    output_name = "authmanager"
    sources = authmanager_sources
    public_configs = [ ":authmanager_config" ]
    public_deps = [ "//build/lite/config/component/cJSON:cjson_shared" ]
  }
}
